--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,6 +33,12 @@ main{
     }
 }
 
+input{
+    color: #fff;
+    font-size: 2rem;
+    text-align: center;
+}
+
 #wordChallenge{
     text-align: center;
     margin-top: 40vh;
@@ -45,6 +51,12 @@ main{
     }
 }
 
+.stats {
+    display: flex;
+    color : $secondary-color;
+    font-size: .6em;
+    justify-content: space-around;
+}
 
 
 .text-highlight{
