--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,7 @@ $text-highlight : #fae61e;
 $letterplay-font : 'Baron Neue';
 $input-underline : #fe3d50;
 $secondary-color : #ee8239;
-
+$correct-answer : green;
 
 body{
     font-size: 4.6rem;
@@ -41,7 +41,7 @@ input{
 
 #wordChallenge{
     text-align: center;
-    margin-top: 40vh;
+    margin-top: 30vh;
     span{
         transition : .3s ease;
         &:hover{
@@ -53,8 +53,9 @@ input{
 
 .stats {
     display: flex;
+    margin-top: -25vh;
     color : $secondary-color;
-    font-size: .6em;
+    font-size: .3em;
     justify-content: space-around;
 }
 
@@ -62,4 +63,51 @@ input{
 .text-highlight{
     color : $text-highlight;
 }
+#solutions{
+    display: flex;
+    justify-content: center;
+}
 
+.solution,
+.wrong
+{
+    display: inline-flex;
+    justify-content: center;
+    width: 5%;
+    margin: 0 6px;
+    color: white;
+    padding:5px;
+    font-size: small;
+    border-radius: 30px;
+}
+
+.solution{
+    background : $font-color;
+    color: $main-color;
+}
+
+.wrong{
+    background : $input-underline;
+}
+
+#deadline-met{
+    font-size: 1.3rem;
+    text-align: center;
+    margin: 20px auto;
+    color: $input-underline;
+    animation: flash-deadline 1s infinite;
+}
+
+@keyframes flash-deadline{
+    0% {
+        opacity: .7;
+    }
+
+    50%{
+        opacity: 1;
+    }
+
+    100% {
+        opacity: .7;
+    }
+}
