--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,11 +24,17 @@ main{
         background: transparent;
         border: none;
         border-bottom : 1px solid $input-underline;
-        margin: 0 20vw;
+        margin: 5vh 20vw;
         width: 60%;
         height: 15%;
         &:focus{
             outline: transparent;
+        }
+        &::placeholder{
+            color:white;
+            font-style: italic;
+            font-weight:100;
+            opacity: .6;
         }
     }
 }
@@ -62,8 +68,11 @@ input{
 
 .text-highlight{
     color : $text-highlight;
+    background : $input-underline;
+    padding: 25px;
 }
 #solutions{
+    margin-top: 30px;
     display: flex;
     justify-content: center;
 }
@@ -97,6 +106,7 @@ input{
     color: $input-underline;
     animation: flash-deadline 1s infinite;
 }
+
 
 @keyframes flash-deadline{
     0% {
