(fx): Code clean up and UI fixes

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@ $letterplay-font : 'Baron Neue';
 $input-underline : #fe3d50;
 $secondary-color : #ee8239;
 $correct-answer : green;
+$white : #fff;
 
 body{
     font-size: 4.6rem;
@@ -24,14 +25,14 @@ main{
         background: transparent;
         border: none;
         border-bottom : 1px solid $input-underline;
-        margin: 5vh 20vw;
-        width: 60%;
+        margin: 5vh 25vw;
+        width: 50%;
         height: 15%;
         &:focus{
             outline: transparent;
         }
         &::placeholder{
-            color:white;
+            color:$white;
             font-style: italic;
             font-weight:100;
             opacity: .6;
@@ -84,7 +85,7 @@ input{
     justify-content: center;
     width: 5%;
     margin: 0 6px;
-    color: white;
+    color: $white;
     padding:5px;
     font-size: small;
     border-radius: 30px;
@@ -97,6 +98,7 @@ input{
 
 .wrong{
     background : $input-underline;
+    color: $white;
 }
 
 #deadline-met{
