--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,13 +14,13 @@ main {
     background: transparent;
     border: none;
     border-bottom: 1px solid #fe3d50;
-    margin: 5vh 20vw;
-    width: 60%;
+    margin: 5vh 25vw;
+    width: 50%;
     height: 15%; }
     main #wordResponse:focus {
       outline: transparent; }
     main #wordResponse::placeholder {
-      color: white;
+      color: #fff;
       font-style: italic;
       font-weight: 100;
       opacity: .6; }
@@ -62,7 +62,7 @@ input {
   justify-content: center;
   width: 5%;
   margin: 0 6px;
-  color: white;
+  color: #fff;
   padding: 5px;
   font-size: small;
   border-radius: 30px; }
@@ -72,7 +72,8 @@ input {
   color: #101731; }
 
 .wrong {
-  background: #fe3d50; }
+  background: #fe3d50;
+  color: #fff; }
 
 #deadline-met {
   font-size: 1.3rem;
