(ft): Resolves each letter into spans and use more than one word for the game

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -50,6 +50,7 @@ input{
     text-align: center;
     margin-top: 30vh;
     span{
+        margin: 0 10px;
         transition : .3s ease;
         &:hover{
             cursor: pointer;
