--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,6 +13,8 @@ $complementary-color-3: #fe3d50;
 
 body{
     font-size: 4.6rem;
+    height: 100vh;
+    width: 100vw;
     font-family: $letterplay-font;
     color: $font-color;
     background: $main-color;
@@ -137,7 +139,36 @@ input{
     }
 }
 
+#top-stats{
+    display: flex;
+    position: absolute;
+    width: 100%;
+}
+.top-stats{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width:20%;
+    height: 100px;
+    background: $complementary-color-2; 
+    margin: 0 1%;
+    transform: scale(0);
+    transition: .4s ease;
+    h2{
+        position: relative;
+        margin: 15% auto;
+        flex-basis: column;
+        color: $main-color;
+        font-size: 20px;
+    }
+    .player-score{
+        color: $complementary-color-3;
+    }
+}
 
+.show-top-stats{
+    transform: scale(1);
+}
 .text-highlight{
     color : $text-highlight;
     background : $complementary-color-3;
