--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@ body {
   font-size: 4.6rem;
   height: 100vh;
   width: 100vw;
-  font-family: "Baron Neue";
+  font-family: "Space Mono", monospace;
   color: #00eeba;
   background: #101731; }
 
